<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_library"
            android:icon="@drawable/ic_library"
            android:title="@string/nav_library"
            android:checked="true" />
        <item
            android:id="@+id/drawer_bubblemap"
            android:icon="@drawable/ic_bubblemap"
            android:title="@string/nav_bubblemap" />
        <item
            android:id="@+id/drawer_stats"
            android:icon="@drawable/ic_stats"
            android:title="@string/nav_stats" />
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/drawer_weekly"
            android:icon="@drawable/ic_weekly"
            android:title="@string/drawer_weekly" />
    </group>

    <item android:title="@string/drawer_section_app">
        <menu>
            <item
                android:id="@+id/drawer_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/drawer_settings" />
            <item
                android:id="@+id/drawer_about"
                android:icon="@drawable/ic_profile"
                android:title="@string/drawer_about" />
        </menu>
    </item>

</menu>
